# ecmp-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  daemon.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  frr.py  health_checks.py  kernel.py  logging.ini  pyproject.toml  requirements.txt
.github/workflows/: build-test.yaml  ci-test.yaml  ci.yml  test.yaml  tests.yaml
config/: __init__.py  config.toml  interfaces.py
tests/: config_frr.toml  config_kernel.toml  docker-compose.yaml
