[tool.poetry]
name = "ecmp-manager"
version = "1.0.0"
description = "Multi-WAN ECMP and failover for FRRouting"
authors = ["MattKobayashi <matthew@kobayashi.au>"]
package-mode = false

[tool.poetry.dependencies]
python = "~=3.13.0"
scapy = "2.6.1"
toml = "0.10.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core==2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py313']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
